[gd_scene load_steps=4 format=3 uid="uid://2hrwlt0qtbdy"]

[ext_resource type="Script" uid="uid://5q5kra8tplv8" path="res://login.gd" id="1_g250l"]
[ext_resource type="AudioStream" uid="uid://drcoravnbrs7c" path="res://imgs/backgrounds/login/Juhani Junkala [Chiptune Adventures] 2. Stage 2.ogg" id="2_xlo4h"]
[ext_resource type="VideoStream" uid="uid://deqhvovtsnmxu" path="res://imgs/backgrounds/login/241824.ogv" id="3_xlo4h"]

[node name="LoginScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g250l")

[node name="BackgroundAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_xlo4h")
volume_db = -16.61
autoplay = true
parameters/looping = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -107.0
offset_right = 65.0
offset_bottom = 107.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.73942, 1.08879)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Username"

[node name="UsernameField" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter username"
expand_to_text_length = true
emoji_menu_enabled = false

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Password"

[node name="PasswordField" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter password"
expand_to_text_length = true
emoji_menu_enabled = false
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="LoginButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Login"

[node name="RegisterButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Register"

[node name="ErrorLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 2

[node name="BackgroundVideo" type="VideoStreamPlayer" parent="."]
z_index = -31
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
scale = Vector2(0.500021, 0.49995)
mouse_filter = 2
stream = ExtResource("3_xlo4h")
volume_db = -80.0
autoplay = true
loop = true
